INCLUDES = -I$(top_srcdir)/cgi++/jsutil
METASOURCES = AUTO
lib_LTLIBRARIES = libcgixx.la
noinst_HEADERS = var.h apprequest.h base64.h cgiapp.h cgiexception.h cgilayout.h \
	commontags.h cssbuilder.h file.h globaldef.h htmltag.h htmltagautocompleter.h \
	httpheader.h httputil.h md5.h paramsmap.h paramsmapcore.h paramsmapcore.hpp \
	request.h session.h sessionconfig.h sessioncookieparams.h stringlist.h \
	jsutil/jarray.h jsutil/jbool.h jsutil/jfunction.h jsutil/jnumber.h jsutil/jobject.h jsutil/jstring.h jsutil/jvar.h
libcgixx_la_SOURCES = var.cpp apprequest.cpp base64.cpp cgiapp.cpp cgiexception.cpp \
	cgilayout.cpp commontags.cpp cssbuilder.cpp file.cpp htmltag.cpp \
	htmltagautocompleter.cpp httpheader.cpp httputil.cpp md5.cpp paramsmap.cpp request.cpp \
	session.cpp sessionconfig.cpp sessioncookieparams.cpp stringlist.cpp \
	jsutil/jarray.cpp jsutil/jbool.cpp jsutil/jfunction.cpp jsutil/jnumber.cpp jsutil/jobject.cpp jsutil/jstring.cpp jsutil/jvar.cpp
